--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-libmeegotouch (0.20.47~1) unstable; urgency=low
+libmeegotouch (0.20.47-1) unstable; urgency=low
 
-  * Unreleased
+  * Fixes: NB#196165 - longTapped not emitted by MListItem   
+  * Fixes: The function of switch button color calculation.
+  * Fixes: NB#196274 - Switch button visual & 'toggled' signal aren't in sync at slow sliding
+  * Fixes: NB#195654 - Applications updating themselves unnecessarily in switcher grid during panning
+  * Fixes: NB#174044 - MCompleter: Contact name is cut by VKB in Text Message Editor
+  * Fixes: NB#179542 - Recipient-editor disables fn key lock
+  * Fixes: NB#195455 - Rotating feeds list from portrait to landscape returns user to top of feeds list
+  * Fixes: NB#194443 - Slider label doesn't disappear automatically
 
- -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Tue, 05 Oct 2010 15:27:00 +0300
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Thu, 08 Oct 2010 12:27:00 +0300
 
 libmeegotouch (0.20.46-1) unstable; urgency=low
 
