--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02049 0.20.49
+
+\subsection New
+- MRichTextEdit: implemented setHtml() and toHtml()
+
 \section v02045 0.20.45
 
 \subsection New
