--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.50~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com> Thu, 21 Oct 2010 14:59:00 +0300
+
 libmeegotouch (0.20.49-1) unstable; urgency=low
 
   * Fixes: NB#199335 - MList : ScrollTo function scrolls to incorrect index.
