--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.49.2-1) unstable; urgency=low
+
+  * Fixes: NB#200994 -  MLinearLayoutPolicy::sizeHint() calls resize()
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Mon, 01 Nov 2010 14:36:31 +0300
+
 libmeegotouch (0.20.49-1) unstable; urgency=low
 
   * Fixes: NB#199335 - MList : ScrollTo function scrolls to incorrect index.
